<resources>



    <string name="app_name">Order Status</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pref_title_attribute">Attribute Units</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_default_app_term_conditions">This is the deafult liscene of the Li.OrderStatus App.</string>
    <string name="pref_title_app_term_condition">Terms And Conditions</string>
    <string name="pref_default_app_about_lisec">About Our Organization.</string>
    <string name="pref_title_app_about_lisec">About Lisec Group</string>
    <string name="summary_about_lisec">About Our Organisations and its Value with you.</string>
    <string name="summary_terms_conditions">View the Terms and Coditions of our Software.</string>
    <string name="pref_title_app_version">App Version</string>
    <string name="pref_default_app_version">1.0</string>
    <string name="pref_title_language">Preffered Language</string>
    <string name="any_string">any string</string>
    <string name="action_bundle">Bundle</string>
    <string name="action_newsfeed">News Feed</string>
    <string name="action_account">Account</string>
    <string name="action_category">Category</string>
    <string name="action_home">Home</string>

</resources>
